--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>WDNC</title>
   <meta name="description" content='"WE DO NOT CARE"'>
-	<link rel="icon" href="/icon.png">
+	<link rel="icon" href="icon.png">
 
   <link rel="stylesheet" href="css/style.css">
   <script src="js/jquery-3.5.1.min.js"></script>
@@ -18,12 +18,12 @@
 <body onload="init()">
   
   <audio id="audio0">
-    <source src="/tomlin.mp3" type="audio/mp3">
+    <source src="tomlin.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
 
   <audio id="audio1">
-    <source src="/sas.mp3" type="audio/mp3">
+    <source src="sas.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
 
