--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/script.js"></script>
   <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
 </head>
 
 
