--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/jquery-3.5.1.min.js"></script>
   <script src="js/script.js"></script>
+
+  <link rel="apple-touch-icon-precomposed" href="custom_icon.png"/> 
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /> -->
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Modak&display=swap" rel="stylesheet">
