--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="js/script.js"></script>
 
   <link rel="apple-touch-icon-precomposed" href="custom_icon.png"/> 
+  <link rel="apple-touch-icon" href="custom_icon.png"/> 
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <!-- <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" /> -->
   <!-- fonts -->
