--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </audio>
 
 
-  <button id="fbtn" class="" onclick="func()">WE DO NOT CARE</button>
+  <button id="fbtn" class="" onclick="func()"></button>
 
   <button id="cbtn" onclick="changeAudio()">CHANGE</button>
   <!-- <img src="tomlin.PNG"> -->
